Closed Bug 1615017 Opened 6 years ago Closed 4 years ago

ThreadSanitizer: data race [@ mozilla::net::CacheFileMetadata::SetHash] vs. [@ MemoryUsage]

Categories

(Core :: Networking: Cache, defect, P2)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox74 --- wontfix
firefox94 --- fixed

People

(Reporter: decoder, Assigned: kershaw)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(3 files, 1 obsolete file)

The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 11c9c5ce3955.

The report misses the line number for the ::SetHash call, but I believe this is racing on mHashArraySize being updated in SetHash while being read in MemoryUsage. Probably not critical in any way if we just compute the wrong/outdated memory usage, but would still be nice to fix this at some point.

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

Michal?

Flags: needinfo?(michal.novotny)
Priority: -- → P1
Whiteboard: [necko-triaged]
Assignee: nobody → michal.novotny
Flags: needinfo?(michal.novotny)

CacheFileMetadata's methods called from CacheFile are always called under CacheFile's lock. Let's use this lock to fix the data race in CacheFileMetadata::OnDataRead() and CacheFileMetadata::OnDataWritten().

Setting P2 priority for now because this one is not critical and I'm not sure what's the right fix here.

Assignee: michal.novotny → nobody
Priority: P1 → P2
Attachment #9126431 - Attachment is obsolete: true

Triage: still an issue.

Flags: needinfo?(kershaw)
Assignee: nobody → kershaw
Status: NEW → ASSIGNED
Flags: needinfo?(kershaw)
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a4b0e37d3a8f Use a wrapped lock to protect data in CacheFileMetadata, r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Blocks: 1744996
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: