Bug 1615017 - Use a wrapped lock to protect data in CacheFileMetadata, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D126650